# db-query-mcp

./: .gitignore  README.md  README_ZH.md  pyproject.toml
db_query_mcp/db_adapters/: elasticsearch_db_adapter.py
examples/: sqlite_company.db  sqlite_titanic.db
