[project]
name = "db-query-mcp"
version = "0.0.2"
description = "db-query-mcp is an MCP tool that supports querying and exporting data from multiple databases. "
authors = ["zhangshulin <zhangslwork@yeah.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NewToolAI/db-query-mcp"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "sqlalchemy>=2.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
db-query-mcp = "db_query_mcp.main:run"
db_query_mcp = "db_query_mcp.main:run"
